# norm-aware-agent39

./: .gitignore  CITATION.cff  QUICKSTART.md  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt  test_config_merge.py
.agent/workflows/: dl_pipeline.md  hpo_sweep.md  tabular_pipeline.md
.github/workflows/: ci.yml
config/: model_params.yaml
configs/: base.yaml  config.yaml  ml.yaml
configs/hydra/: __init__.py
configs/ml/: model_params.yaml  schema.yaml
configs/modes/: __init__.py  agentic.yaml  norm_aware.yaml  pipeline.yaml
configs/regime/: __init__.py  balanced.yaml  exploratory.yaml  strict.yaml
configs/regimes/: balanced.yaml  exploratory.yaml  strict.yaml
configs/sweep/: __init__.py  mode_comparison.yaml  violation_study.yaml
docker/: Dockerfile  environment.yml
docs/: AGENT_TRAINING.md  HYDRA_SLURM.md
ml_output/: model.pkl
models/: model_v1.pkl
norms/: registry.yaml  reporting.yaml  reproducibility.yaml  stability.yaml  validity.yaml
reports/: metrics.json
scripts/: make_figures.py  make_rigor_tradeoff.py  make_tables.py  ml_pipeline.sh  run_matrix.sh  run_one.sh  run_seeds.sh  submit_agent_enforcement_test.sh  submit_full_matrix_2node.sh  submit_mode_comparison.sh  submit_multirun_single_job.sh  submit_rigor_tradeoff.sh  submit_table1_violations.sh  submit_table2.sh  test_agent_enforcement.sh  test_agentic_mode.sh  test_reproducibility_norms.sh
src/: build_features_ml.py  evaluate.py  train_ml.py  validate_data.py
tests/: test_determinism.py  test_norm_registry_loads.py  test_violation_injection.py
(+71 files in other folders)
